REGRESSION (r269557): ASSERTION FAILED: Completion handler should always be called under WebCore::HTMLMediaElement::exitFullscreen https://bugs.webkit.org/show_bug.cgi?id=218722

Reviewed by Eric Carlson.

No new tests, covered by an existing test that is crashing on the bots.

* WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::VideoFullscreenManager::exitVideoFullscreenForVideoElement):


Canonical link: https://commits.webkit.org/231401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269610 268f45cc-cd09-0410-ab3c-d52691b4dbfc